# Samsara

./: .gitignore  README.md  main.py  pyproject.toml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_facilities.py  0002_add_type_specialties.py  0003_add_hospital_details.py  0004_add_services.py  0005_add_facility_category.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routes/: chat.py  facilities.py  geo.py
backend/app/services/: distance.py
backend/scripts/: geocode.py  import_healthposts_clinics.py  import_to_db.py
data/: geocode_cache.json  hospitals_geocoded.csv  raw_hospitals.csv
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ChatBot.tsx  FacilityCard.tsx  Filters.tsx  MapView.tsx  SearchBar.tsx  Sidebar.tsx
frontend/src/hooks/: useFacilities.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/types/: index.ts
